--- a/Frontend/src/app/components/content/block/block.component.html
+++ b/Frontend/src/app/components/content/block/block.component.html
@@ -6,35 +6,35 @@
     <div class="rows-cells">
       <div class="first-row">
         <div class="doubleRoom">Łazienka</div>
-        <app-cell class="cell" *ngFor="let cell of getBetweenCells(1,4,block)" [cell]="cell" [prisoners]="prisoners" [fetchBlocks]="fetchBlocks"></app-cell>
+        <app-cell class="cell" *ngFor="let cell of getBetweenCells(1,4,block)" [cell]="cell" [prisoners]="prisoners" [fetchBlocks]="fetchBlocks" [fetchPrisoners]="fetchPrisoners"></app-cell>
         <div class="hall"></div>
-        <app-cell class="cell" *ngFor="let cell of getBetweenCells(5,5,block)" [cell]="cell" [prisoners]="prisoners" [fetchBlocks]="fetchBlocks"></app-cell>
+        <app-cell class="cell" *ngFor="let cell of getBetweenCells(5,5,block)" [cell]="cell" [prisoners]="prisoners" [fetchBlocks]="fetchBlocks" [fetchPrisoners]="fetchPrisoners"></app-cell>
       </div>
       <div class="second-row">
-        <app-cell class="cell" *ngFor="let cell of getBetweenCells(6,7,block)" [cell]="cell" [prisoners]="prisoners" [fetchBlocks]="fetchBlocks"></app-cell>
+        <app-cell class="cell" *ngFor="let cell of getBetweenCells(6,7,block)" [cell]="cell" [prisoners]="prisoners" [fetchBlocks]="fetchBlocks" [fetchPrisoners]="fetchPrisoners"></app-cell>
       </div>
       <div class="center-rows">
-        <app-cell class="cell" *ngFor="let cell of getBetweenCells(8,8,block)" [cell]="cell" [prisoners]="prisoners" [fetchBlocks]="fetchBlocks"></app-cell>
+        <app-cell class="cell" *ngFor="let cell of getBetweenCells(8,8,block)" [cell]="cell" [prisoners]="prisoners" [fetchBlocks]="fetchBlocks" [fetchPrisoners]="fetchPrisoners"></app-cell>
         <div class="central-cells">
-          <app-cell class="cell" *ngFor="let cell of getBetweenCells(9,12,block)" [cell]="cell" [prisoners]="prisoners" [fetchBlocks]="fetchBlocks"></app-cell>
+          <app-cell class="cell" *ngFor="let cell of getBetweenCells(9,12,block)" [cell]="cell" [prisoners]="prisoners" [fetchBlocks]="fetchBlocks" [fetchPrisoners]="fetchPrisoners"></app-cell>
         </div>
-        <app-cell class="cell" *ngFor="let cell of getBetweenCells(13,13,block)" [cell]="cell" [prisoners]="prisoners" [fetchBlocks]="fetchBlocks"></app-cell>
+        <app-cell class="cell" *ngFor="let cell of getBetweenCells(13,13,block)" [cell]="cell" [prisoners]="prisoners" [fetchBlocks]="fetchBlocks" [fetchPrisoners]="fetchPrisoners"></app-cell>
       </div>
       <div class="center-rows">
-        <app-cell class="cell" *ngFor="let cell of getBetweenCells(14,14,block)" [cell]="cell" [prisoners]="prisoners" [fetchBlocks]="fetchBlocks"></app-cell>
+        <app-cell class="cell" *ngFor="let cell of getBetweenCells(14,14,block)" [cell]="cell" [prisoners]="prisoners" [fetchBlocks]="fetchBlocks" [fetchPrisoners]="fetchPrisoners"></app-cell>
         <div class="central-cells">
-          <app-cell class="cell" *ngFor="let cell of getBetweenCells(15,18,block)" [cell]="cell" [prisoners]="prisoners" [fetchBlocks]="fetchBlocks"></app-cell>
+          <app-cell class="cell" *ngFor="let cell of getBetweenCells(15,18,block)" [cell]="cell" [prisoners]="prisoners" [fetchBlocks]="fetchBlocks" [fetchPrisoners]="fetchPrisoners"></app-cell>
         </div>
-        <app-cell class="cell" *ngFor="let cell of getBetweenCells(19,19,block)" [cell]="cell" [prisoners]="prisoners" [fetchBlocks]="fetchBlocks"></app-cell>
+        <app-cell class="cell" *ngFor="let cell of getBetweenCells(19,19,block)" [cell]="cell" [prisoners]="prisoners" [fetchBlocks]="fetchBlocks" [fetchPrisoners]="fetchPrisoners"></app-cell>
       </div>
       <div class="second-row">
-        <app-cell class="cell" *ngFor="let cell of getBetweenCells(20,21,block)" [cell]="cell" [prisoners]="prisoners" [fetchBlocks]="fetchBlocks"></app-cell>
+        <app-cell class="cell" *ngFor="let cell of getBetweenCells(20,21,block)" [cell]="cell" [prisoners]="prisoners" [fetchBlocks]="fetchBlocks" [fetchPrisoners]="fetchPrisoners"></app-cell>
       </div>
       <div class="first-row">
         <div class="doubleRoom">Kuchnia</div>
-        <app-cell class="cell" *ngFor="let cell of getBetweenCells(22,25,block)" [cell]="cell" [prisoners]="prisoners" [fetchBlocks]="fetchBlocks"></app-cell>
+        <app-cell class="cell" *ngFor="let cell of getBetweenCells(22,25,block)" [cell]="cell" [prisoners]="prisoners" [fetchBlocks]="fetchBlocks" [fetchPrisoners]="fetchPrisoners"></app-cell>
         <div class="hall"></div>
-        <app-cell class="cell" *ngFor="let cell of getBetweenCells(26,26,block)" [cell]="cell" [prisoners]="prisoners" [fetchBlocks]="fetchBlocks"></app-cell>
+        <app-cell class="cell" *ngFor="let cell of getBetweenCells(26,26,block)" [cell]="cell" [prisoners]="prisoners" [fetchBlocks]="fetchBlocks" [fetchPrisoners]="fetchPrisoners"></app-cell>
       </div>
     </div>
   </div>
