--- a/Frontend/src/app/components/content/prisoners/prisoner-edit/prisoner-edit.component.html
+++ b/Frontend/src/app/components/content/prisoners/prisoner-edit/prisoner-edit.component.html
@@ -2,30 +2,34 @@
 
 <div class="container-fluid my-5">
   <div class="row">
-    <div class="col-md-4 offset-md-4 form-background">
+    <div class="col-md-4 offset-md-4 form-background" *ngIf="prisoner">
       <form #form="ngForm" (submit)="onSubmit(form)" autocomplete="off">
-        <input type="hidden" name="id" #id="ngModel" [(ngModel)]="prisoner.id">
         <div class="form-group mb-2 mt-3">
           <label>IMIĘ</label>
-          <input name="FirstName" #FirstName="ngModel" [(ngModel)]="prisoner.FirstName" class="form-control" required>
-          <div class="validation-error" *ngIf="FirstName.invalid && FirstName.touched">To pole jest wymagane.</div>
+          <input name="firstName" #firstName="ngModel" [(ngModel)]="prisoner.firstName" class="form-control" required>
+          <div class="validation-error" *ngIf="firstName.invalid && firstName.touched">To pole jest wymagane.</div>
         </div>
         <div class="form-group mb-2">
           <label>NAZWISKO</label>
-          <input name="LastName" #LastName="ngModel" [(ngModel)]="prisoner.LastName" class="form-control" required>
-          <div class="validation-error" *ngIf="LastName.invalid && LastName.touched">To pole jest wymagane.</div>
+          <input name="lastName" #lastName="ngModel" [(ngModel)]="prisoner.lastName" class="form-control" required>
+          <div class="validation-error" *ngIf="lastName.invalid && lastName.touched">To pole jest wymagane.</div>
         </div>
         <div class="form-group mb-2">
           <label>DATA URODZENIA</label>
-          <input name="DateOfBirth" #DateOfBirth="ngModel" [(ngModel)]="prisoner.DateOfBirth" class="form-control"
-            type="date" required>
-          <div class="validation-error" *ngIf="DateOfBirth.invalid && DateOfBirth.touched">To pole jest wymagane.</div>
+          <input name="dateOfBirth" #dateOfBirth="ngModel" ngModel="{{prisoner.dateOfBirth.substring(0,10)}}" class="form-control"
+                 type="date" required>
+          <div class="validation-error" *ngIf="dateOfBirth.invalid && dateOfBirth.touched">To pole jest wymagane.</div>
         </div>
         <div class="form-group mb-4">
           <label>NR CELI</label>
-          <input name="CellId" #CellId="ngModel" [(ngModel)]="prisoner.CellId" class="form-control" type="number"
-            pattern="[0-9]{1}" min=0 required>
-          <div class="validation-error" *ngIf="CellId.invalid && CellId.touched">To pole jest wymagane.</div>
+          <select  name="cell" #cell="ngModel" [(ngModel)]="prisoner.cell.id" class="form-control">
+            <option class="text-danger" value="" selected>Bez przypisania</option>
+            <option value="0" *ngIf="cells.length<1" selected disabled>Brak wolnych cel</option>
+            <option *ngFor="let cell of cells" [value]="cell.id" [id]="cell.id">
+              Block {{getBlock(cell.id)}} - Cela {{cell.id}}
+            </option>
+          </select>
+          <div class="validation-error" *ngIf="cell.invalid && cell.touched">To pole jest wymagane.</div>
         </div>
         <div class="row py-1 no-gutters">
           <div class="col-md-6 pr-1">
