--- a/Frontend/src/app/components/content/prisoners/prisoner-sick-note/prisoner-sick-note.component.html
+++ b/Frontend/src/app/components/content/prisoners/prisoner-sick-note/prisoner-sick-note.component.html
@@ -3,16 +3,17 @@
 </header>
 <div class="container-fluid">
   <div class="row mt-5">
-    <div class="col-md-8 offset-md-4 mt-5 form-background">
+    <div class="col-md-8 offset-md-4 mt-5 form-background" *ngIf="prisoners.length>0">
       <form #form="ngForm" (submit)="onSubmit(form)" autocomplete="off">
         <div class="form-group">
           <label >Wybierz więźnia</label>
           <select  name="prisonerId" #prisonerId="ngModel" [(ngModel)]="selectedPrisonerId" class="form-control" required>
+            <option value="" selected disabled>Wybierz więźnia</option>
             <option *ngFor="let prisoner of prisoners" [value]="prisoner.id">
-               {{prisoner.FirstName}} {{prisoner.LastName}} z celi {{prisoner.CellId}}
+               {{prisoner.firstName}} {{prisoner.lastName}} z celi {{prisoner.cell.id}}
               </option>
           </select>
-          <div class="validation-error" *ngIf="prisonerId.invalid && prisonerId.touched">To pole jest wymagane.</div>
+          <div class="validation-error" *ngIf="(prisonerId.invalid|| prisonerId.value.length <1 ) && prisonerId.touched">To pole jest wymagane.</div>
         </div>
         <div class="form-group">
           <label>Powód zwolnienia</label>
@@ -27,8 +28,9 @@
           </div>
         </div>
         <div class="form-group">
-          <button class="btn btn-block btn-lg text-white submit" type="submit" [disabled]="form.invalid">Wystaw
-            zwolnienie</button>
+          <button class="btn btn-block btn-lg text-white submit" type="submit" [disabled]="form.invalid || prisonerId.value.length < 1">
+            Wystaw zwolnienie
+          </button>
         </div>
       </form>
     </div>
