--- a/Frontend/src/app/components/content/prisoners/prisoner/prisoner.component.html
+++ b/Frontend/src/app/components/content/prisoners/prisoner/prisoner.component.html
@@ -7,23 +7,29 @@
       <form #form="ngForm" (submit)="onSubmit(form)" autocomplete="off">
         <div class="form-group mb-2 mt-3">
           <label>IMIĘ</label>
-          <input name="FirstName" #FirstName="ngModel" [(ngModel)]="service.formData.FirstName" class="form-control" required>
-          <div class="validation-error" *ngIf="FirstName.invalid && FirstName.touched">To pole jest wymagane.</div>
+          <input name="firstName" #firstName="ngModel" [(ngModel)]="service.formData.firstName" class="form-control" required>
+          <div class="validation-error" *ngIf="firstName.invalid && firstName.touched">To pole jest wymagane.</div>
         </div>
         <div class="form-group mb-2">
           <label>NAZWISKO</label>
-          <input name="LastName" #LastName="ngModel" [(ngModel)]="service.formData.LastName" class="form-control" required>
-          <div class="validation-error" *ngIf="LastName.invalid && LastName.touched">To pole jest wymagane.</div>
+          <input name="lastName" #lastName="ngModel" [(ngModel)]="service.formData.lastName" class="form-control" required>
+          <div class="validation-error" *ngIf="lastName.invalid && lastName.touched">To pole jest wymagane.</div>
         </div>
         <div class="form-group mb-2">
           <label>DATA URODZENIA</label>
-          <input name="DateOfBirth" #DateOfBirth="ngModel" [(ngModel)]="service.formData.DateOfBirth" class="form-control" required type="date">
-          <div class="validation-error" *ngIf="DateOfBirth.invalid && DateOfBirth.touched">To pole jest wymagane.</div>
+          <input name="dateOfBirth" #dateOfBirth="ngModel" [(ngModel)]="service.formData.dateOfBirth" class="form-control" required type="date">
+          <div class="validation-error" *ngIf="dateOfBirth.invalid && dateOfBirth.touched">To pole jest wymagane.</div>
         </div>
         <div class="form-group mb-4">
           <label>NR CELI</label>
-          <input name="CellId" #CellId="ngModel" [(ngModel)]="service.formData.CellId" class="form-control" required type="number" pattern="[0-9]{1}" min=0>
-          <div class="validation-error" *ngIf="CellId.invalid && CellId.touched">To pole jest wymagane.</div>
+          <select  name="cell" #cell="ngModel" [(ngModel)]="selectedCell" class="form-control">
+            <option class="text-danger" value="" selected>Bez przypisania</option>
+            <option value="0" *ngIf="cells.length<1" selected disabled>Brak wolnych cel</option>
+            <option *ngFor="let cell of cells" [value]="cell.id">
+              Block {{getBlock(cell.id)}} - Cela {{cell.id}}
+            </option>
+          </select>
+          <div class="validation-error" *ngIf="cell.invalid && cell.touched">To pole jest wymagane.</div>
         </div>
         <div class="form-group">
           <button type="submit" [disabled]="form.invalid" class="btn btn-block text-white submit-sm">Dodaj więźnia</button>
