--- a/Frontend/src/app/components/content/prisoners/prisoner/prisoner.component.html
+++ b/Frontend/src/app/components/content/prisoners/prisoner/prisoner.component.html
@@ -7,17 +7,17 @@
       <form #form="ngForm" (submit)="onSubmit(form)" autocomplete="off">
         <div class="form-group mb-2 mt-3">
           <label>IMIĘ</label>
-          <input name="firstName" #firstName="ngModel" [(ngModel)]="service.formData.firstName" class="form-control" required>
+          <input name="firstName" #firstName="ngModel" [(ngModel)]="prisoner.firstName" class="form-control" required>
           <div class="validation-error" *ngIf="firstName.invalid && firstName.touched">To pole jest wymagane.</div>
         </div>
         <div class="form-group mb-2">
           <label>NAZWISKO</label>
-          <input name="lastName" #lastName="ngModel" [(ngModel)]="service.formData.lastName" class="form-control" required>
+          <input name="lastName" #lastName="ngModel" [(ngModel)]="prisoner.lastName" class="form-control" required>
           <div class="validation-error" *ngIf="lastName.invalid && lastName.touched">To pole jest wymagane.</div>
         </div>
         <div class="form-group mb-2">
           <label>DATA URODZENIA</label>
-          <input name="dateOfBirth" #dateOfBirth="ngModel" [(ngModel)]="service.formData.dateOfBirth" class="form-control" required type="date">
+          <input name="dateOfBirth" #dateOfBirth="ngModel" [(ngModel)]="prisoner.dateOfBirth" class="form-control" required type="date">
           <div class="validation-error" *ngIf="dateOfBirth.invalid && dateOfBirth.touched">To pole jest wymagane.</div>
         </div>
         <div class="form-group mb-4">
