Execution list added

--- a/Frontend/src/app/components/menu/menu.component.html
+++ b/Frontend/src/app/components/menu/menu.component.html
@@ -30,6 +30,6 @@
     aria-controls="executionCollapse"> Egzekucje <i class='fas fa-angle-down'></i> </a>
   <div class="collapse" id="executionCollapse">
     <a class="menu-item colapse-item py-2" [routerLink]="'/execution/reservation'">Zarezerwuj egzekucję</a>
-    <a class="menu-item colapse-item py-2" [routerLink]="'/'">Lista egzekucji</a>
+    <a class="menu-item colapse-item py-2" [routerLink]="'/executions'">Lista egzekucji</a>
   </div>
 </div>
