Assign role to user added

--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -20,7 +20,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-12 p-1">
+    <div class="col-12 p-1" style="content-align:bottom">
       <footer>
         <app-footer></app-footer>
       </footer>
