--- a/Frontend/src/app/components/menu/menu.component.html
+++ b/Frontend/src/app/components/menu/menu.component.html
@@ -14,10 +14,11 @@
   <a class="menu-item colapse-item py-2" *ngIf="isAdmin" [routerLink]="'/user'">Lista użytkowników</a>
 </div>
 <a class="menu-item py-2" data-toggle="collapse" href="#workerCollapse" role="button" aria-expanded="false"
-aria-controls="workerCollapse" *ngIf="isAdmin"> Pracownicy <i class='fas fa-angle-down'></i> </a>
+aria-controls="workerCollapse" > Pracownicy <i class='fas fa-angle-down'></i> </a>
 <div class="collapse" id="workerCollapse">
-<a class="menu-item colapse-item py-2" *ngIf="isAdmin" [routerLink]="'/department'">Lista działów</a>
-<a class="menu-item colapse-item py-2" *ngIf="isAdmin" [routerLink]="'/workers'">Lista pracowników</a>
+<a class="menu-item colapse-item py-2"  [routerLink]="'/department'">Lista działów</a>
+<a class="menu-item colapse-item py-2"  [routerLink]="'/workers'">Lista pracowników</a>
+<a class="menu-item colapse-item py-2" *ngIf="isAdmin" [routerLink]="'/add-worker'">Dodaj pracownika, {{isAdmin$.value}}</a>
 </div>
   <a class="menu-item py-2" data-toggle="collapse" href="#visitCollapse" role="button" aria-expanded="false"
     aria-controls="visitCollapse"> Odwiedziny <i class='fas fa-angle-down'></i> </a>
