--- a/Frontend/src/app/components/content/workers/workers-list/workers-list.component.html
+++ b/Frontend/src/app/components/content/workers/workers-list/workers-list.component.html
@@ -2,7 +2,7 @@
 <div *ngFor="let worker of workers">
   <article class="post">
     <header>
-      <h2 class="post_title">{{worker.user.firstName}} {{worker.user.lastName}}</h2>
+      <h2 class="post_title">{{worker.salary}} {{worker.user.lastName}}</h2>
     </header>
     <img class="post_img" src="assets/images/nico.jpg">
     <div class="post_text">
