Worker list component completed

--- a/Frontend/src/app/components/content/prisoners/prisoners-list/prisoners-list.component.html
+++ b/Frontend/src/app/components/content/prisoners/prisoners-list/prisoners-list.component.html
@@ -13,7 +13,7 @@
     </div>
     <footer class="post_date">
       <button mat-button>Oceń</button>
-      <button mat-button [routerLink]="['/prisoners/', prisoner.id]">Szczególy</button>
+      <button mat-button [routerLink]="['/prisoners/', prisoner.id]">Szczegóły</button>
     </footer>
   </article>
 </div>
