--- a/Frontend/src/app/components/content/worker/add-worker/add-worker.component.html
+++ b/Frontend/src/app/components/content/worker/add-worker/add-worker.component.html
@@ -32,7 +32,7 @@
           </div>
         </div>
         <div class="form-group">
-          <label>Zarobki</label>
+          <label>Wynagrodzenie</label>
           <input type="number" min=1 name="salary" #salary="ngModel" ngModel class="form-control" required>
           <div class="validation-error" *ngIf="salary.invalid && salary.touched">To pole jest wymagane.</div>
         </div>
