--- a/Frontend/src/app/components/content/worker/worker/worker.component.html
+++ b/Frontend/src/app/components/content/worker/worker/worker.component.html
@@ -1,3 +1,79 @@
-<p>
-  worker works!
-</p>
+<app-site-header [childMessage]="headerOfSite"></app-site-header>
+<div class="container-fluid">
+  <div class="row my-4">
+    <div class="col-md-6 offset-md-3 py-2 bg-content-mid text-center">
+      <h2>{{worker.user.firstName}} {{worker.user.lastName}}</h2>
+    </div>
+    <div class="col-md-6 offset-md-3 bg-content-mid text-center">
+      <img class="size" src="assets/images/nico.jpg" />
+    </div>
+    <div class="col-md-6 offset-md-3 bg-content-mid text-center pb-3">
+      <h5><b>Username:</b> {{worker.user.username}}</h5>
+      <h5><b>Wynagrodzenie:</b> {{worker.salary}} zł</h5>
+      <h5><b>Premia:</b> {{worker.bonus}} zł</h5>
+      <h5><b>Data zatrudnienia:</b> {{worker.dateFrom.substring(0,10)}}</h5>
+      <h5><b>Departament:</b> {{worker.department.departmentName}}</h5>
+
+      <h5 class="my-3 table-header" data-toggle="collapse" href="#rolesCollapse" role="button" aria-expanded="false"
+        aria-controls="rolesCollapse"> Przydzielone role <i class='fas fa-angle-down'></i> </h5>
+      <div *ngFor="let role of worker.user.roles" class="collapse" id="rolesCollapse">
+        <h5>{{role}}</h5>
+      </div>
+
+      <h5 class="my-3 table-header" data-toggle="collapse" href="#sickLeavesCollapse" role="button" aria-expanded="false"
+        aria-controls="sickLeavesCollapse"> Wystawione zwolnienia lekarskie <i class='fas fa-angle-down'></i> </h5>
+      <div class="collapse" id="sickLeavesCollapse">
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">Od</th>
+              <th scope="col">Do</th>
+              <th scope="col">Więzień</th>
+              <th scope="col">Powód</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let sickLeave of worker.sickLeaves">
+              <th scope="row">{{sickLeave.dateStart.substring(0,10)}}</th>
+              <td>{{sickLeave.dateStop.substring(0,10)}}</td>
+              <td>{{sickLeave.prisoner.firstName}} {{sickLeave.prisoner.lastName}}</td>
+              <td>{{sickLeave.reason}}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+
+      <h5 class="my-3 table-header" data-toggle="collapse" href="#executionsCollapse" role="button"
+        aria-expanded="false" aria-controls="executionsCollapse">
+        Zaplanowane egzekucje <i class='fas fa-angle-down'></i>
+      </h5>
+      <div class="collapse" id="executionsCollapse">
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">Data egzekucji</th>
+              <th scope="col">Więzień</th>
+              <th scope="col">Ostatnie życzenie</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let execution of worker.execution">
+              <th scope="row">{{execution.executionDate.substring(0,10)}}</th>
+              <td>{{execution.prisoner.firstName}} {{execution.prisoner.lastName}}</td>
+              <td>{{execution.lastWish}}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      
+      <div class="row py-1 no-gutters ">
+        <div class="col-md-6 pr-1">
+          <button mat-button class="btn btn-block text-white submit py-1">Edytuj</button>
+        </div>
+        <div class="col-md-6 pl-1">
+          <button mat-button [routerLink]="'/workers'" class="btn btn-block text-white submit py-1">Wróć</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
