--- a/Frontend/src/app/components/content/worker/workers-list/workers-list.component.html
+++ b/Frontend/src/app/components/content/worker/workers-list/workers-list.component.html
@@ -7,12 +7,11 @@
     <img class="post_img" src="assets/images/nico.jpg">
     <div class="post_text">
       <p>Wynagrodzenie: {{worker.salary}} zł</p>
-      <p>Podwyżka: {{worker.bonus}} zł</p>
+      <p>Premia: {{worker.bonus}} zł</p>
       <p>Data zatrudnienia: {{worker.dateFrom}}</p>
     </div>
     <footer class="post_date">
-      <button mat-button>Szczegóły</button>
-      <!-- <button mat-button [routerLink]="['/prisoners/', worker.id]">Szczegóły</button> -->
+      <button mat-button [routerLink]="['/worker/', worker.id]">Szczegóły</button>
     </footer>
   </article>
 </div>
