--- a/Frontend/src/app/components/content/worker/worker/worker.component.html
+++ b/Frontend/src/app/components/content/worker/worker/worker.component.html
@@ -12,6 +12,7 @@
       <h5><b>Wynagrodzenie:</b> {{worker.salary}} zł</h5>
       <h5><b>Premia:</b> {{worker.bonus}} zł</h5>
       <h5><b>Data zatrudnienia:</b> {{worker.dateFrom.substring(0,10)}}</h5>
+      <h5 *ngIf="worker.dateTo"><b>Data zakończenia pracy:</b> {{worker.dateTo.substring(0,10)}}</h5>
       <h5><b>Departament:</b> {{worker.department.departmentName}}</h5>
 
       <h5 class="my-3 table-header" data-toggle="collapse" href="#rolesCollapse" role="button" aria-expanded="false"
@@ -68,7 +69,7 @@
       
       <div class="row py-1 no-gutters ">
         <div class="col-md-6 pr-1">
-          <button mat-button class="btn btn-block text-white submit py-1">Edytuj</button>
+          <button mat-button [routerLink]="['/worker/edit/', worker.id]" class="btn btn-block text-white submit py-1">Edytuj</button>
         </div>
         <div class="col-md-6 pl-1">
           <button mat-button [routerLink]="'/workers'" class="btn btn-block text-white submit py-1">Wróć</button>
