add tooltip and method get by id in application controller

--- a/Frontend/src/app/components/content/cell/cell.component.css
+++ b/Frontend/src/app/components/content/cell/cell.component.css
@@ -81,3 +81,30 @@
   background: #3F3F3F;
 }
 
+.mask {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0,0,0,0.5);
+  z-index: 2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.cardPrisoner {
+  position: relative;
+  color: black;
+  width: 50%;
+}
+
+.cardPrisonerClose {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: black;
+  font-size: 20px;
+  cursor: pointer;
+}
