Added finish work button

--- a/Frontend/src/app/components/content/worker/workers-list/workers-list.component.html
+++ b/Frontend/src/app/components/content/worker/workers-list/workers-list.component.html
@@ -11,6 +11,7 @@
       <p>Data zatrudnienia: {{worker.dateFrom.substring(0,10)}}</p>
     </div>
     <footer class="post_date">
+      <button mat-button *ngIf="!worker.dateTo" (click)="finishWork(worker.id)">Zwolnij pracownika</button>
       <button mat-button [routerLink]="['/worker/salary-management/', worker.id]">Zarządzaj wynagrodzeniem</button>
       <button mat-button [routerLink]="['/worker/', worker.id]">Szczegóły</button>
     </footer>
