--- a/Frontend/src/app/components/content/prisoners/prisoners-list/prisoners-list.component.html
+++ b/Frontend/src/app/components/content/prisoners/prisoners-list/prisoners-list.component.html
@@ -9,7 +9,8 @@
       <p>Data urodzenia: {{prisoner.dateOfBirth}}</p>
       <p>Data rejestracji: {{prisoner.joinDate}}{{prisoner.id}}</p>
       <p>Opis:</p>
-      <p>Więzień osadzony jest w celi {{prisoner.cell.id}}, sprawowanie dobre, srednia ocena...</p>
+      <p *ngIf="prisoner.cell">Więzień osadzony jest w celi {{prisoner.cell.id}}, sprawowanie dobre, srednia ocena...</p>
+      <p *ngIf="!prisoner.cell">Więzień nie został osadzony w celi</p>
     </div>
     <footer class="post_date">
       <button mat-button>Oceń</button>
