--- a/Frontend/src/styles.css
+++ b/Frontend/src/styles.css
@@ -1,10 +1,12 @@
+/* @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i'); */
+
+
 *,
 *::before,
 *::after {
     padding: 0;
     margin: 0;
 }
-@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i');
 
 body {
     box-sizing: border-box;
